Fix alignment of topic

--- a/_theme/whitewashing/static/default.css
+++ b/_theme/whitewashing/static/default.css
@@ -66,3 +66,6 @@ div.node p {
 .buttons {
     margin-top: 10px;
 }
+.related ul {
+    padding-bottom: 8px;
+}
